# lab3-5

./: CMakeLists.txt
cmake/: GetGoogletest.cmake
cmake/googletest/: CMakeLists.txt.in
src/lab3/: CMakeLists.txt  Calculator.h  util.h
src/lab3/src/: Calculator.cpp  main.cpp  util.cpp
src/lab4/: CMakeLists.txt  Hamming74Coder.h  ICoder.h
src/lab4/src/: Hamming74Coder.cpp
src/lab5/: CMakeLists.txt  Hamming74Decoder.h  IDecoder.h
src/lab5/src/: Hamming74Decoder.cpp
test/lab3/: CMakeLists.txt  CalculatorTest.cpp
test/lab4/: CMakeLists.txt  HammingCoderTest.cpp
test/lab5/: CMakeLists.txt  HammingDecoderTest.cpp
